# dcc-mcp

./: MAYA_SETUP.md  README.md  codex.config.maya.example.toml  pyproject.toml  run_gui.py  run_maya_gui.py  启动MayaGUI.bat
blender_mcp/: blender_session.py  server_with_gui.py
houdini_mcp/: houdini_session.py  server_with_gui.py
houdini_mcp/gui/: app.py  dcc_config.py  main_window.py
houdini_mcp/gui/widgets/: dashboard_widget.py  logs_widget.py  settings_widget.py
maya_mcp/: __init__.py  daemon_client.py  daemon_launcher.py  daemon_server.py  maya_session.py  server_with_gui.py
maya_mcp/utils/: state_paths.py
substance_mcp/: server_with_gui.py  substance_session.py
